tests/compile-errors/ce-to.valk

class A {
    x: uint (0)
}
fn main() {
    let a = A {}
    let s = a.to(String)
}

